# bgen

./: .gitignore  .gitmodules  .travis.yml  LICENSE.txt  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: python-package.yml
bgen/: __init__.py  bgen.pyx  index.py
src/: bgen.cpp  bgen.h  genotypes.cpp  genotypes.h  header.cpp  header.h  reader.cpp  reader.h  samples.cpp  samples.h  utils.cpp  utils.h  variant.cpp  variant.h  writer.cpp  writer.h
src/bgen/: __init__.py  bgen.pyx  index.py  reader.pyx  writer.pyx
tests/: test_alt_dosage_nonstandard.py  test_bgen_streaming.py  test_bgenfile.py  test_bgenvar.py  test_bgenwriter.py  test_index.py  test_load_example_files.py  utils.py
tests/data/: alt_dosage_check.bgen
