[build-system]
requires = ["cython", "setuptools >= 40.6.0", "wheel"]
build-backend = 'setuptools.build_meta'

[project]
name = 'bgen'
version = '1.9.6'
description = 'Package for loading data from bgen files'
readme = 'README.md'
requires-python = '>=3.8'
authors = [
    {name = "Jeremy McRae", email = 'jmcrae@illumina.com'},
]

dependencies = [
    'numpy',
]

classifiers = [
    "License :: OSI Approved :: MIT License",
    'Development Status :: 4 - Beta',
    'Topic :: Scientific/Engineering :: Bio-Informatics',
]

[tool.setuptools]
packages = [
    'bgen',
]

[project.urls]
homepage = 'https://github.com/jeremymcrae/bgen'
